--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit&display=swap");
 .App {
   min-height: 100vh;
+  background-image: linear-gradient(90deg, #d4fc79 0%, #96e6a1 100%);
+  width: 100vw;
+  font-family: "Outfit", sans-serif;
 }
